SERVER-10408 checking that sleep time is positive